test/error/FieldStatic.ci
public class Test
{
	static int Foo; //ERROR: Field cannot be static
}
